--- a/students.html
+++ b/students.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <!-- бакалавър -->
                 <div class="col">
-                    <div class="card p-3">
+                    <div class="card p-3 h-100">
                         <h3 class="schedule-card-heading text-center mb-3">Бакалавър</h3>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Информатика</div>
@@ -73,7 +73,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Бизнес ИТ</div>
@@ -83,7 +83,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">СТ и дизайн</div>
@@ -93,7 +93,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Софтуерно инженерство</div>
@@ -103,7 +103,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Математика</div>
@@ -113,7 +113,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Приложна математика</div>
@@ -123,13 +123,13 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
                         </div>
                     </div>
                 </div>
                 <!-- магистър -->
                 <div class="col">
-                    <div class="card p-3">
+                    <div class="card p-3 h-100">
                         <h3 class="schedule-card-heading text-center mb-3">Магистър</h3>
                         <div class="row m-2">
                             <div class="mb-2">
@@ -141,7 +141,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#">Архив</a>
+                                    <a href="#" class="align-middle">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#">Архив</a>
+                                    <a href="#" class="align-middle">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#">Архив</a>
+                                    <a href="#" class="align-middle">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -242,10 +242,124 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mt-4">
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Научна работа</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Състезания</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Дискусии
+                                            </h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Студентски съвет
+                                            </h5>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4 mb-5">
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Правила</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Стипендии</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Проверка на оценки
+                                            </h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Стажове
+                                            </h5>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
+    <footer id="main-footer">
+        <div class="text-center p-4">
+            © 2022 Факултет математика и информатика към ПУ "Паисий Хилендарски"
+        </div>
+    </footer>
 </body>
 
 </html>
