--- a/about.html
+++ b/about.html
@@ -51,7 +51,184 @@
             </div>
         </nav>
     </header>
+    <div class="container">
 
+        <img id="fmi-img" src="/assets/img/illustrations/fmi.jpg">
+
+        <p id="fmi-txt-about">Факултетът по математика и информатика (ФМИ) е първият самостоятелен факултет в над
+            половинвековната история на Пловдивския университет „Паисий Хилендарски“. Днес той е утвърден и
+            авторитетен
+            център за научни изследвания и подготовка на специалисти в областта на математиката, информатиката и
+            информационните технологии. В него работят около 87 висококвалифицирани преподаватели, половината от
+            които
+            са хабилитирани (14 професори и 28 доценти) и повече от половината – с научни степени (5 доктори на
+            науките
+            и 71 доктори). Голяма част от тях са специализирали в реномирани чуждестранни научни институти и
+            университети, били са гост-преподаватели в университети на САЩ, Япония, Африка и Европа. Много са
+            участията
+            им в авторитетни международни научни форуми и в научни и образователни проекти съвместно с университети
+            от
+            ЕС, САЩ и др. ФМИ осъществява обмен на студенти и преподаватели по различни академични програми с
+            университети в Австрия, Англия, Германия, Ирландия, Испания, Македония, Португалия, Румъния, Сърбия и
+            Черна
+            гора, Унгария, Финландия.
+            <br>
+            Годишно ФМИ обучава около 2000 студенти за придобиване на бакалавърска и магистърска степен по
+            специалности
+            от професионалните направления 4.6. „Информатика и компютърни науки“, 4.5. „Математика“ и 1.3.
+            „Педагогика
+            на обучението по...“. Провежда обучение за придобиване на образователната и научна степен „Доктор“ на
+            около
+            100 докторанти. Обучава и лица с висше образование за придобиване на допълнителна професионална
+            квалификация
+            „Учител по математика“ и „Учител по информатика и информационни технологии“. Водят се множество различни
+            други образователни курсове – кандидатстудентски, компютърни и др.
+            <br>
+            Всички направления и специалности във ФМИ са акредитирани от Националната агенция за оценяване и
+            акредитация
+            с оценки над 9 за срок до 2020 г. Повече информация относно програмите, учебните планове и условията за
+            кандидатстване ще намерите в нашия сайт.
+            <br>
+            ФМИ се гордее с възпитаниците си, реализиращи се успешно не само у нас, но и навсякъде по света. Те са
+            изявени научни работници и преподаватели във висши училища, ръководители на катедри, факултети,
+            университети. Хиляди са прекрасни учители, директори на училища, експерти и ръководители в областта на
+            образованието. Много са висококвалифицирани специалисти в различни фирми и водещи компании в областта на
+            информатиката и информационните технологии, в банки и застрахователни дружества, в икономиката и
+            търговията,
+            в научноизследователски групи. Не са малко и реализиралите се успешно като политици и държавни
+            ръководители
+            в регионален и републикански мащаб – кметове, областни управители, депутати, посланици,
+            заместник-министри,
+            министри и дори вицепремиери. Възпитаници на Факултета са и граждани от Турция, Македония, Гърция,
+            Русия,
+            Молдова, Украйна, Ирак, Никарагуа, Йордания, Австрия, Израел.
+            <br>
+            Факултетът е разположен в нова университетска сграда с голям парк, уютни барчета, студентски стол,
+            университетска книжарница, съвременни семинарни зали, аудитории и аули, представителна заседателна зала,
+            специализирана библиотека. ФМИ разполага с 14 модерни учебни компютърни зали с над 300 работни места и
+            мултимедии, лаборатория по роботика, мехатроника и телемеханика, лаборатория по интерактивна математика,
+            постоянен интернет достъп до компютърните зали и кабинетите на преподавателите, както и с безжичен
+            интернет
+            достъп на територията на сградата и вътрешния двор, с лицензиран софтуер с учебни и други информационни
+            материали.
+        </p>
+
+        <div class="row">
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Обучение</h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Научна дейност</h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Състав
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Проекти
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4 mb-5">
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Документи</h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Възпитаници</h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Материална база
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded-2 h-100">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col"><a href="#" class="card-link">
+                                    <h5 class="card-title font-weight-bold p-0 text-center">Връзки
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer id="main-footer">
+        <div class="text-center p-4">
+            © 2022 Факултет математика и информатика към ПУ "Паисий Хилендарски"
+        </div>
+    </footer>
 
 </body>
 
